[package]
name = "tiramisu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
capturing-glob = "0.1.1"
chrono = "0.4.43"
color-eyre = "0.6.5"
crossterm = "0.29.0"
derive-new = "0.7.0"
fern = "0.7.1"
indexmap = "2.13.0"
log = "0.4.29"
minijinja = "2.14.0"
nucleo = "0.5.0"
ratatui = "0.30.0"
serde = "1.0.228"
serde_valid = "2.0.1"
temp-env = "0.3.6"
toml = "0.9.11"
tui-input = "0.15.0"
